static/css/style.css
/* ... */
/* Stats */

.stats .list-group-item {
  text-align: center;
}
.draws {
  background: var(--draw-bg-color);
  color: var(--draw-color);
}

.hist {
  height: 8px;
  background: var(--shaded-bg-color);
  border: 1px solid var(--border-color);
  margin-bottom: 2px;
}
.hist.active {
  background: var(--grave-border-color);
  border: 1px solid var(--grave-border-color);
}
.hist-empty {
  color: var(--grave-border-color);
}

/* Code */

pre {
  font-size: 9.5px;
  border: 1px solid var(--border-color);
  border-radius: 4px;
  background-color: var(--shaded-bg-color);
  padding: 9.5px;
}

code {
  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
  color: var(--code-color);
  padding: 2px 4px;
  border-radius: 4px;
  background-color: var(--code-bg-color);
}

pre code {
  padding: 0;
  color: inherit;
  background-color: transparent;
}

/* List of endgames */

.endgames {
  padding: 0;
  font-size: 0;
}
.endgames li {
  font-size: 14px;
  list-style: none;
  padding: 4px;
  margin: 0;
  border: 1px solid var(--shaded-bg-color);
  text-align: center;
  display: inline-block;
  width: 33%;
  box-sizing: border-box;
}

.endgames li.maximal {
  border-color: var(--border-color);
  background: var(--shaded-bg-color);
}

/* Two columns */

@media(min-width: 680px) {
  .left-side, .right-side {
    width: 50%;
  }

  .left-side {
    top: 0;
    bottom: 0;
    position: fixed;
    background: none;
    background: var(--shaded-bg-color);
  }
  .left-side > .inner {
    margin-right: 10%;
  }

  .right-side {
    margin-left: 50%;
  }
  .right-side > .inner {
    margin-left: 10%;
  }

  footer > .inner {
    position: fixed;
    bottom: 40px;
    right: 55%;
  }
}

/* Two columns, but limited height */

@media(min-width: 680px) and (max-height: 880px) {
  footer > .inner {
    bottom: 10px;
  }
}
@media(min-width: 680px) and (max-height: 860px) {
  footer > .inner {
    position: relative;
    right: auto;
    margin-left: 55%;
  }
}
@media(min-width: 680px) and (max-height: 700px) {
  h1.main {
    padding: 10px 0;
  }
}
@media(min-width: 680px) and (max-height: 650px) {
  h1.main {
    display: none;
  }
  #side-to-move-toolbar {
    margin-top: 10px;
  }
}
@media(min-width: 680px) and (max-height: 560px) {
  h1.main, #board-toolbar {
    display: none;
  }
}
@media(min-width: 680px) and (max-height: 400px) {
  #side-to-move-toolbar, #form-set-fen, .spare {
    display: none;
  }
  #board {
    margin: 0;
  }
}

/* Loading spinner */

.spinner {
  width: 40px;
  height: 40px;

  position: relative;
  margin: 100px auto;
}

.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: var(--body-color);
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;

  animation: bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  animation-delay: -1.0s;
}

@keyframes bounce {
  0%, 100% {
    transform: scale(0.0);
  } 50% {
    transform: scale(1.0);
  }
}

@media (prefers-reduced-motion: reduce) {
  .double-bounce1, .double-bounce2 {
    animation: none;
  }
}

